--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -1,41 +1,42 @@
 .Modal  {
-    position: fixed;
+     position: fixed;
     z-index: 500;
     background-color: white;
-    width: 60%;
-    border: 1px solid rgb(189, 84, 84);
-    box-shadow: 1px 1px 1px black;
-    padding: 16px;
-    left: 15%;
-    top: 18%;
-    box-sizing: border-box;
-    opacity:1.2 !important;
+    width: 50%;
+    padding: 21px;
+    text-align: center;
+    top: 50%;
     transition: all 0.3s ease-out;
+    left: 50%;
+    border-radius: 5px;
+    transform: translate(-50%, -50%) !important;
+}
+textarea{
+width: 95%;
+    border: 1px solid #00000029;
+    resize: unset;
+    height: 100px;
+    border-radius: 5px;
+    padding: 10px;
 }
 
-@media (min-width: 600px) {
-    .Modal {
-        width: 500px;
-        left: calc(50% - 250px);
-    }
-}
 
 
 .Button{
-    position: fixed;
     z-index: 500;
     font-weight: bold;
+    width: 100px;
+    margin: 10px;
+    text-transform: capitalize;
     background-color: rgb(184, 13, 13);
     color: white;
     border: 1px solid rgb(189, 169, 169);
-    box-shadow: 1px 1px 1px black;
     padding: 16px;
-    left: 45%;
     border-radius: 8px;
-    top: 18%;
-    font-size: 8px;
+    font-size: 11px;
     box-sizing: border-box;
-    opacity:1.2 !important;
+    opacity: 1.2 !important;
+    cursor: pointer;
     transition: all 0.5s ease-out;
 }
 
