--- a/src/components/Todo/Todo.css
+++ b/src/components/Todo/Todo.css
@@ -1,30 +1,32 @@
-.Todo {
 
- width: 100%;
+ 
+ .Todo {
+    width: calc(21% - 7px);
     padding: 16px;
     text-align: center;
-    border: 1px solid #eee;
-    box-shadow: 0 2px 3px #ccc;
-    margin: 10px;
-    box-sizing: border-box;
-
-}
-
-.Todo:hover{
-    background-color: rgb(213, 217, 223);
-}
-
-
-.strong{
-    color: navy;
-    content:" "; 
-    display:inline-block; 
+    background: #ffffff;
+    box-shadow: 0px 0px 4px -1px #000;
+      border: 1px solid #f9eaea;
+    border-radius: 5px;
+    box-shadow: 0 14px 26px rgb(0 0 0 / 8%);
+  transition: all 0.3s ease-out;
+    cursor: pointer;
     
-}
-
-
-.Name{
-
-    text-transform: capitalize;
-    font-size: larger;
-}
+ }
+ .Todo:hover {
+      transform: translateY(-5px) scale(1.005) translateZ(0);
+  box-shadow: 0 24px 36px rgba(0,0,0,0.11),
+    0 24px 46px var(--box-shadow-color);
+ }
+ 
+ 
+ .strong {
+     color: navy;
+     content: " ";
+     display: inline-block;
+ }
+ 
+ .Name {
+     text-transform: capitalize;
+     font-size: larger;
+ }
